--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap"
       rel="stylesheet">
-    <title>React App</title>
+    <title>&#127909  CineFlex</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
